name:                gcm-http
version:             0.1.1
synopsis:            GCM HTTP-server client
description:         GCM HTTP-server client
homepage:            http://github.com/feeniks/gcm-http#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.GCM.HTTP, Network.GCM.HTTP.Types, Network.GCM.HTTP.Instances
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.5.1
                     , exceptions >= 0.8.0.2
                     , http-conduit >= 2.1.8
                     , http-client >= 0.4.12
                     , http-client-tls >= 0.2.2
                     , http-types >= 0.8.6
                     , aeson >= 0.7.0.3
                     , lens >= 4.7.0.1
                     , data-default-class
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/feeniks/gcm-http
